--- a/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/StudentView.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/StudentView.xaml
@@ -35,6 +35,7 @@
         <StackPanel Orientation="Horizontal" Grid.Row="7" Grid.ColumnSpan="2" Margin="10 2 2 2">
             <!-- Gombok helye -->
             <Button  Margin="0 10 2 2" HorizontalAlignment="Right" MinWidth="80" Content="Új adat"/>
+            <Button  Margin="0 10 2 2" HorizontalAlignment="Right" MinWidth="80" Content="Mentés"/>
         </StackPanel>
 
         <TextBox Grid.Row="1" Grid.Column="1" Margin="2 2 2 2" Padding="0 2" Text="{Binding SelectedStudent.LastName}"></TextBox>
