--- a/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/StudentView.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/StudentView.xaml
@@ -36,6 +36,7 @@
             <!-- Gombok helye -->
             <Button  Margin="0 10 2 2" HorizontalAlignment="Right" MinWidth="80" Content="Új adat"/>
             <Button  Margin="0 10 2 2" HorizontalAlignment="Right" MinWidth="80" Content="Mentés"/>
+            <Button  Margin="0 10 2 2" HorizontalAlignment="Right" MinWidth="80" Content="Törlés"/>
         </StackPanel>
 
         <TextBox Grid.Row="1" Grid.Column="1" Margin="2 2 2 2" Padding="0 2" Text="{Binding SelectedStudent.LastName}"></TextBox>
