--- a/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/StudentView.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/StudentView.xaml
@@ -35,7 +35,13 @@
         <StackPanel Orientation="Horizontal" Grid.Row="7" Grid.ColumnSpan="2" Margin="10 2 2 2">
             <!-- Gombok helye -->
             <Button  Margin="0 10 2 2" HorizontalAlignment="Right" MinWidth="80" Content="Új adat"/>
-            <Button  Margin="0 10 2 2" HorizontalAlignment="Right" MinWidth="80" Content="Mentés"/>
+            <Button  Margin="0 10 2 2" 
+                     HorizontalAlignment="Right" 
+                     MinWidth="80" 
+                     Content="Mentés"
+                     Command="{Binding DoSaveCommand}"
+                     CommandParameter="{Binding SelectedStudent}"
+                     />
             <Button  Margin="0 10 2 2" HorizontalAlignment="Right" MinWidth="80" Content="Törlés"/>
         </StackPanel>
 
