--- a/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/StudentView.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/StudentView.xaml
@@ -34,7 +34,12 @@
         <Label Grid.Row="6" Grid.Column="0">Tanulmányi szint:</Label>
         <StackPanel Orientation="Horizontal" Grid.Row="7" Grid.ColumnSpan="2" Margin="10 2 2 2">
             <!-- Gombok helye -->
-            <Button  Margin="0 10 2 2" HorizontalAlignment="Right" MinWidth="80" Content="Új adat"/>
+            <Button  Margin="0 10 2 2" 
+                     HorizontalAlignment="Right" 
+                     MinWidth="80" 
+                     Content="Új adat"
+                     Command="{Binding DoNewStudentCommand}"
+                     />
             <Button  Margin="0 10 2 2" 
                      HorizontalAlignment="Right" 
                      MinWidth="80" 
